[package]
name = "news_letter_backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "news_letter_backend"

[dependencies]
actix-web = "4.12.1"
config = "0.15.19"
reqwest = "0.12.25"
serde = "1.0.228"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
